# Theta

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: COMPLETION_SUMMARY.md  EDGE_CASE_TEST_PLAN.md  IMPLEMENTATION_PATH_FORWARD.md  INDEX.md  PATH_FORWARD.md  SESSION_SUMMARY.md  SESSION_SUMMARY_stereo_implementation.md  UNIVERSAL_DEVELOPMENT_PLAN.md  architecture-diagrams.md  architecture.md  network_protocol_schema_plan.md  parallel_team_paths.md  pbr_rendering_roadmap.md  phase2_review.md  phase3_plan.md  phase3_review.md  phase4_plan.md  phase4_status.md  phase5_parallel_plan.md  render_system.md  roadmap_november_2025.md  signaling_integration.md  status_overview.md  telemetry_metrics_reference.md
docs/archive/: phase1-4_summary.md  phase3_review.md
examples/: stereo_window_test.rs  window_test.rs
schemas/: component_manifest.json  network.fbs
src/: lib.rs  main.rs
src/ecs/: mod.rs
src/editor/: commands.rs  mod.rs  telemetry.rs
src/engine/: commands.rs  mod.rs  schedule.rs
src/network/: command_log.rs  mod.rs  replication.rs  schema.rs  signaling.rs  transport.rs  voice.rs
src/render/: mod.rs  window.rs
src/render/shaders/: geometry.wgsl
src/vr/: mod.rs  openxr.rs
src/vr/openxr/: session.rs
tests/: command_pipeline_integration.rs  replication_integration.rs  telemetry_integration.rs  voice_integration.rs  voice_transport.rs
