[package]
name = "theta_engine"
version = "0.1.0"
edition = "2024"

[features]
default = []
render-wgpu = ["wgpu", "pollster"]
vr-openxr = ["openxr"]
physics-rapier = ["rapier3d"]
target-pcvr = ["render-wgpu"]
network-quic = ["quinn", "rustls", "tokio", "ed25519-dalek", "rand"]

[dependencies]
serde = { version = "1", features = ["derive"] }
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
rayon = "1"
openxr = { version = "0.17", optional = true }
serde_json = "1"
rapier3d = { version = "0.17", optional = true }
quinn = { version = "0.10", optional = true }
rustls = { version = "0.21", optional = true }
siphasher = "1"
flatbuffers = "25"
once_cell = "1"
ctor = "0.2"
paste = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"], optional = true }
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
rand = { version = "0.8", optional = true }
thiserror = "1"
log = "0.4"

[build-dependencies]
which = "4"

[dev-dependencies]
proptest = "1"
tempfile = "3"
rcgen = "0.13"

