[package]
name = "theta_engine"
version = "0.1.0"
edition = "2024"

[features]
default = []
render-wgpu = ["wgpu", "pollster", "winit", "raw-window-handle", "bytemuck"]
vr-openxr = ["openxr"]
physics-rapier = ["rapier3d"]
target-pcvr = ["render-wgpu"]
network-quic = [
	"quinn",
	"rustls",
	"tokio",
	"ed25519-dalek",
	"rand",
	"webrtc",
	"tokio-tungstenite",
	"tokio-util",
	"futures-util",
	"bytes",
	"url",
	"audiopus",
	"cpal",
]
command-log-persistence = []

[dependencies]
serde = { version = "1", features = ["derive"] }
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
winit = { version = "0.29", optional = true }
raw-window-handle = { version = "0.6", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
rayon = "1"
openxr = { version = "0.17", optional = true }
serde_json = "1"
rapier3d = { version = "0.17", optional = true }
quinn = { version = "0.10", optional = true }
rustls = { version = "0.21", optional = true }
siphasher = "1"
flatbuffers = "25"
once_cell = "1"
ctor = "0.2"
paste = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"], optional = true }
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
rand = { version = "0.8", optional = true }
thiserror = "1"
log = "0.4"
webrtc = { version = "0.9", optional = true }
tokio-tungstenite = { version = "0.20", optional = true }
tokio-util = { version = "0.7", optional = true }
futures-util = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }
url = { version = "2", optional = true }
audiopus = { version = "0.3.0-rc.0", features = ["coder"], optional = true }
cpal = { version = "0.15", optional = true }

[build-dependencies]
which = "4"

[dev-dependencies]
proptest = "1"
tempfile = "3"
rcgen = "0.13"
env_logger = "0.11"

